@@ -3,7 +3,7 @@
         <li tal:define="show_children       node/show_children;
                         children            node/children;
                         item_url            node/getURL;
-                        item_path           node/path;
+                        item_token          python:view.brain_to_term(node['item']).token;
                         item_icon           node/item_icon;
                         selectable          node/selectable;
                         li_folder_class     python:show_children and ' navTreeFolderish' or '';
@@ -13,7 +13,7 @@
             tal:attributes="class string:navTreeItem visualNoMarker${li_class}">
             <tal:level define="item_class string:contenttype-${node/normalized_portal_type} state-${node/normalized_review_state}">
               <tal:block define="item_class item_class">
-                <a tal:attributes="href item_path; rel level;
+                <a tal:attributes="href item_token; rel level;
                                    title node/Description;
                                    class string:$item_class">
                     <img tal:replace="structure item_icon/html_tag|item_icon" />
